--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="beta-banner">
+        <p>This is a BETA version of the site intended for testing purposes only. All data and content may be deleted upon the official release.</p>
+    </div>    
     <div class="container">
         <h1>Kai's AGLC Citation Generator</h1>
         <p class="disclaimer-note">By continuing to use this tool, you agree to the disclaimer.</p>
