--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div class="beta-banner">
-        <p>This is a BETA version of the site intended for testing purposes only. All data and content may be deleted upon the official release.</p>
+        <p>This is a BETA version of the site intended for testing purposes only. All data and content, including this web URL may be deleted upon the official release.</p>
     </div>    
-    <div class="container">
+    <div class="header-offset">
         <h1>Kai's AGLC Citation Generator</h1>
         <p class="disclaimer-note">By continuing to use this tool, you agree to the disclaimer.</p>
         <p class="disclaimer-note">For bugs, feedback, or feature requests, email <a href="mailto:aglcfeedback@kaiwatanabe.com?subject=AGLC%20Citation%20Generator%20Feedback&body=Hi%20Kai,">aglcfeedback@kaiwatanabe.com</a></p>
